@@ -1,5 +1,11 @@
 2011-09-18  Nicolas François  <nicolas.francois@centraliens.net>
 
+	* src/pwconv.c: Fail if not called correctly.
+	* src/pwconv.c: At the end of main, the passwd and shadow files
+	are locked. No need to check before unlocking.
+
+2011-09-18  Nicolas François  <nicolas.francois@centraliens.net>
+
 	* src/newusers.c: Initially set the passwd's password to '*'
 	instead of 'x'. Only when it is confirmed that a shadow entry is
 	(will be) added, set the passwd's password to 'x'.
